[package]
name = "alphalpha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.5", optional = true }
lophat = { version = "0.9.1", default-features = false , optional = true }
spade = "2.2.0"

[features]
default = ["lophat"]
lophat = ["dep:lophat", "dep:itertools"]
