[package]
name = "alphalpha"
version = "0.1.0"
edition = "2021"
description = "The alpha and weak-alpha filtrations of a set of points in the plane."
homepage = "https://github.com/tomchaplin/alphalpha"
repository = "https://github.com/tomchaplin/alphalpha"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.5", optional = true }
lophat = { version = "0.9.1", default-features = false , optional = true }
spade = "2.2.0"

[features]
default = ["lophat"]
lophat = ["dep:lophat", "dep:itertools"]
